fix pagination visibility over modals

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -10,6 +10,7 @@
   background-color: rgba(0, 0, 0, 0.5);
   visibility: visible;
   opacity: 1;
+  z-index: 1;
 }
 
 #modal-loader {
